Terminada la Practica 1A
Terminada la pagina de receta de pollo al ajo

--- a/Practica1/index.html
+++ b/Practica1/index.html
@@ -6,7 +6,8 @@
     <title>Practica</title>
 </head>
 <body>
-    <h1>sometimes I dream of saving the world... Ignacio</h1>
-    <p>Este es un parrafo</p>
+    <h1>Receta del pollo al ajo</h1>
+
+    <h2>Descripción</h2>
 </body>
 </html>
