Finalizada la clase 6
se finalizo la clase 6 de enlaces y imagenes

--- a/Practica2B/index.html
+++ b/Practica2B/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Paquetes de viaje Airline</title>
+    <title>Vacaciones ideales</title>
     <style>
         h1{
             background-color: red;
@@ -11,9 +11,16 @@
         img{
             height: 200px;
         }
-        mark{
+        #marco1{
             background-color: skyblue;
         }
+        #marco2{
+            background-color: pink;
+        }
+        #marco3{
+            background-color: lightgreen;
+        }
+
 
     </style>
 </head>
@@ -22,9 +29,9 @@
     <h2>Viajes a todas las prefecturas de japon</h2>
     <br> <hr>
     <h2>Tokyo</h2>
-    <h3><mark id="1">Tokyo es New York de Asia</mark></h3>
+    <h3><mark id="marco1">Tokyo es New York de Asia</mark></h3>
     <img src="img/Tokyo.jpg" alt="imagen de Tokyo">
-    <a href="https://youtu.be/Ci5raxp37QE?si=_Hn7P3v3EOrlWybK">Ver referencias</a>
+    <a href="https://youtu.be/Ci5raxp37QE?si=_Hn7P3v3EOrlWybK" target="_blank">Ver referencias</a>
     <p><i>"Tokio, capital de Japón,
        es una metrópoli que combina historia,<br>
        modernidad y cultura, con una población<br>
@@ -34,9 +41,29 @@
     <br> <hr>
 
    <h2>Osaka</h2>
-   <h3><mark id="2">En Osaka, encontraras una entre lo viejo y lo nuevo</mark></h3>
+   <h3><mark id="marco2">En Osaka, encontraras una entre lo viejo y lo nuevo</mark></h3>
    <img src="img/Osaka.jpg" alt="imagen de Osaka">
-   <p></p>
-   
+   <a href="https://youtu.be/jMKdp-QYJ6w?si=AXNOlzBxdG1P3cnm" target="_blank">Ver referencias</a>
+
+   <p><i>Osaka vive bajo la filosofía del Kuidaore<br>
+     (comer hasta caer rendido). Es la cuna del Takoyaki<br>
+      (bolitas de pulpo) y del Okonomiyaki<br>
+      (una especie de tortilla/pizza japonesa).<br>
+       El barrio de Dotonbori, con sus luces de neón<br>
+        y el icónico cartel de Glico Man, es el<br>
+         epicentro gastronómico donde el olor a comida<br>
+         callejera te persigue en cada esquina.</i></p>
+         <br> <hr>
+
+         <h2>Nagasaki</h2>
+   <h3><mark id="marco3">"Nagasaki es la prueba de que,<br>
+     incluso tras la noche más oscura, la vida siempre vuelve<br>
+     a florecer con más fuerza."</mark></h3>
+   <img src="img/Nagasaki.jpg" alt="imagen de Nagasaki">
+   <a href="https://youtu.be/-OK5dC2k1YI?si=whmcVUzWEjtL4WLZ" target="_blank">Ver referencias</a>
+   <p><i>Nagasaki tiene una atmósfera nostálgica y acogedora.<br>
+        Es una ciudad para caminar (o usar sus encantadores tranvías antiguos),<br>
+         disfrutar del aire marino y aprender sobre la capacidad del<br>
+         ser humano para reconstruirse con gracia y esperanza.</i></p>
 </body>
 </html>
