--- a/Practica2B/index.html
+++ b/Practica2B/index.html
@@ -8,12 +8,20 @@
         h1{
             background-color: red;
         }
+
         img{
             height: 200px;
         }
-        mark{
+        #marco1{
+            background-color: pink;
+        }
+        #marco2{
             background-color: skyblue;
         }
+        #marco3{
+            background-color: red;
+        }
+
 
     </style>
 </head>
@@ -22,7 +30,7 @@
     <h2>Viajes a todas las prefecturas de japon</h2>
     <br> <hr>
     <h2>Tokyo</h2>
-    <h3><mark id="1">Tokyo es New York de Asia</mark></h3>
+    <h3><mark id="marco1">Tokyo es New York de Asia</mark></h3>
     <img src="img/Tokyo.jpg" alt="imagen de Tokyo">
     <a href="https://youtu.be/Ci5raxp37QE?si=_Hn7P3v3EOrlWybK">Ver referencias</a>
     <p><i>"Tokio, capital de Japón,
@@ -34,9 +42,19 @@
     <br> <hr>
 
    <h2>Osaka</h2>
-   <h3><mark id="2">En Osaka, encontraras una entre lo viejo y lo nuevo</mark></h3>
+   <h3><mark id="marco2">En Osaka, encontraras una entre lo viejo y lo nuevo</mark></h3>
    <img src="img/Osaka.jpg" alt="imagen de Osaka">
-   <p></p>
-   
+   <a href="https://youtu.be/Bo_SNljOzns?si=uHds6ulEGlkCfIb7">Ver referencias</a>
+   <p><i>Osaka es la tercera ciudad más grande de Japón,<br>
+     ubicada en la región de Kansai, y se distingue por<br>
+      su vibrante vida nocturna, su gastronomía única<br>
+       y su mezcla de modernidad con tradición.</i></p>
+       <br> <hr>
+    
+    <h2>Hiroshima</h2>
+    <h3><mark id="marco3">“Generalmente se cree que la cultura es algo creado,<br>
+         mantenido y desarrollado sólo mediante el esfuerzo humano.<br>
+        Pero la cultura se origina en la asociación entre el hombre<br>
+         y la naturaleza.” </mark></h3>
 </body>
 </html>
