se termino la Guia 7
se termino la guia 7 de listas ordenadas y desordenadas

--- a/Practica2B/index.html
+++ b/Practica2B/index.html
@@ -20,8 +20,6 @@
         #marco3{
             background-color: lightgreen;
         }
-
-
     </style>
 </head>
 <body>
@@ -41,7 +39,7 @@
     <br> <hr>
 
    <h2>Osaka</h2>
-   <h3><mark id="marco2">En Osaka, encontraras una entre lo viejo y lo nuevo</mark></h3>
+   <h3><mark id="marco2">En Osaka, encontraras una ciudad entre lo viejo y lo nuevo</mark></h3>
    <img src="img/Osaka.jpg" alt="imagen de Osaka">
    <a href="https://youtu.be/jMKdp-QYJ6w?si=AXNOlzBxdG1P3cnm" target="_blank">Ver referencias</a>
 
