--- a/Practica3A/index.html
+++ b/Practica3A/index.html
@@ -7,5 +7,22 @@
 </head>
 <body>
     <h1>Cosas que hacer en el Salvador</h1>
+
+    <h2> planes en el Salvador</h2>
+    <ul>
+        <li>Subir un Volcán</li>
+        <li>Explorar playas</li>
+        <li>Ruta arqueologica</li>
+        <li>Vistar Cascadas y Chorros </li>
+        <li>lagos, lanchas y motos acuaticas</li>
+    </ul>
+
+    <h2>Top 3 lugares más populares</h2>
+    <ol>
+        <li>Sunsent park</li>
+        <li>Centro Historico</li>
+        <li>Cerro Verde</li>
+    </ol>
+</body>
 </body>
 </html>
