--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -6,6 +6,25 @@
     <title>Document</title>
 </head>
 <body>
-   <h1>Superman</h1> 
+    <header>
+        <h1></h1>
+        <nav>
+            <ul>
+                <li><a></a></li>
+                <li><a></a></li>
+                <li><a></a></li>
+                <li><a></a></li>
+                <li><a></a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <h2></h2>
+        </section>
+        <section>
+            
+        </section>
+    </main>
 </body>
 </html>
