avance en el proyecto
se avanzo con el proyecto, Pruebas

--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -21,10 +21,7 @@
             he saved people because is the right thing to do,<br>
              we could use a little bit more of that"</strong></h2>
              <hr>
-        <p>Enviado de bebé a la Tierra desde el moribundo planeta Krypton, Kal-El fue adoptado por Martha y Jonathan Kent de Smallville,
-             Kansas. Creciendo como Clark Kent, dedicó su vida a ayudar a otros con las habilidades que desarrolló a partir del sol de la Tierra. Al mudarse a Metrópolis,
-              se convirtió en Superman, manteniendo aún su identidad secreta como Clark Kent,
-             que trabaja en el periódico Daily Planet.</p>
+        eriódico Daily Planet.</p>
          <nav>
             <ul>
                 <li><a href="S1">Historia</a></li>
@@ -32,8 +29,13 @@
                 <li><a href="S3">Ficha tecnica</a></li>
                 <li><a href="S4">Registro de fans</a></li>
                 <li><a href="S5">Galería</a></li>
+                <li><a href="S6">Otro personaje</a></li>
             </ul> 
-        <hr>
+            
+        <p>Enviado de bebé a la Tierra desde el moribundo planeta Krypton, Kal-El fue adoptado por Martha y Jonathan Kent de Smallville,
+             Kansas. Creciendo como Clark Kent, dedicó su vida a ayudar a otros con las habilidades que desarrolló a partir del sol de la Tierra. Al mudarse a Metrópolis,
+              se convirtió en Superman, manteniendo aún su identidad secreta como Clark Kent,
+             que trabaja en el p
 
 </body>
 </html>
