Se arreglaron bugs del proyecto
Se arreglo un bug del proyecto

--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -187,7 +187,7 @@
            </section>
            
            <section>
-            <h2>Galerías</h2>
+            <h2 id="S5">Galerías</h2>
             <img src="img/superman1.jpg">
             <img src="img/superman2.jpg">
             <img src="img/superman3.jpg">
@@ -198,6 +198,12 @@
              <img src="img/superman9.jpg">
              <img src="img/superman10.jpg">
            </section>
+        <br>
+
+        <footer>
+            <p>Creado por José Ignacio Morales flores</p>
+            <p>Todos los derechos reservados</p>
+        </footer>
 
     
 
